# plugins-workspace

./: package.json  pnpm-lock.yaml
.changes/: pre.json
examples/api/: CHANGELOG.md  package.json
examples/api/src-tauri/: CHANGELOG.md  Cargo.toml
plugins/dialog/: CHANGELOG.md  Cargo.toml
plugins/fs/: CHANGELOG.md  Cargo.toml  package.json
plugins/http/: CHANGELOG.md  Cargo.toml  package.json
plugins/notification/: CHANGELOG.md  Cargo.toml  package.json
plugins/persisted-scope/: CHANGELOG.md
plugins/updater/: CHANGELOG.md  Cargo.toml  package.json
plugins/window-state/: Cargo.toml
