[package]
name = "tauri-plugin-window-state"
version = "0.1.1"
description = "Save window positions and sizes and restore them when the app is reopened."

  [package.authors]
  workspace = true

  [package.license]
  workspace = true

  [package.edition]
  workspace = true

  [package.rust-version]
  workspace = true

[dependencies]
bincode = "1.3"
bitflags = "2"

  [dependencies.serde]
  workspace = true

  [dependencies.serde_json]
  workspace = true

  [dependencies.tauri]
  workspace = true

  [dependencies.log]
  workspace = true

  [dependencies.thiserror]
  workspace = true
